<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >
    
    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/search_hint" />

    <GridView
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etQuery"
        android:layout_above="@+id/btnNext"
        android:numColumns="3" >
    </GridView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/gvResults"
        android:tag="8"
        android:visibility="invisible"
        android:onClick="onImageSearch"
        android:text="@string/btn_next" />
    
    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gvResults"
        android:layout_alignParentBottom="true"
        android:tag="-8"
        android:visibility="invisible"
        android:onClick="onImageSearch"
        android:text="@string/btn_prev" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gvResults"
        android:layout_alignRight="@+id/gvResults"
        android:layout_marginRight="1dp"
        android:onClick="onImageSearch"
        android:tag="0"
        android:text="@string/btn_search" />

</RelativeLayout>
